--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             This site is just front -end website using HTML5  , CSS3 ,JS  , BOOT
 
                             <span id="dots">...</span>
-                            <span id="more">STRAP , jQuery and some librar....
+                            <span id="more">STRAP , jQuery and some library
                             The Purpose of this project to show our team skills in the web development .
                             We hope that our website has obtained your good evaluation and that it is a 
                             work to communicate our humble idea to you and deal easily with our site. 
